# mcp-tinybird

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py  smithery.yaml
.github/workflows/: tinybird-cd.yml  tinybird-ci.yml
bluesky-demo/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
bluesky-demo/src/app/: globals.css  layout.tsx  page.tsx
bluesky-demo/src/app/api/token/: route.ts
mcp-analytics/: README.md  deploy.html
mcp-analytics/datasources/: mcp_logs_python.datasource  mcp_monitoring.datasource  mv_count_mcp_logs_by_tool.datasource  prompts.datasource
mcp-analytics/pipes/: api_count_errors.pipe  api_count_errors_5m.pipe  api_count_requests.pipe  api_count_requests_5m.pipe  api_count_uniq_sessions.pipe  api_count_uniq_sessions_5m.pipe  api_gauge_errors.pipe  api_gauge_requests.pipe  api_gauge_uniq_sessions.pipe  api_logs.pipe  api_prometheus.pipe  mv_count_mcp_errors_by_tool_pipe.pipe  mv_count_mcp_logs_by_tool_pipe.pipe  mv_mcp_logs_python_pipe.pipe
mcp-server-analytics/: README.md  TEMPLATE.md  mcp-metrics.json  mcp-server-metrics-with-logs-v1.json
mcp-server-analytics/tinybird/datasources/: mcp_monitoring.datasource  mv_count_mcp_logs_by_prompt.datasource  mv_uniq_mcp_sessions_by_app.datasource
mcp-server-analytics/tinybird/pipes/: api_count_errors.pipe  api_count_uniq_sessions_5m.pipe  mv_mcp_logs_pipe.pipe  mv_mcp_logs_python_pipe.pipe  mv_uniq_mcp_sessions_by_app_pipe.pipe
src/mcp-tinybird/: server.py
src/mcp_tinybird/: __main__.py  run_sse.py  run_stdio.py  server.py  sse.py  stdio.py  tb.py
src/tinybird_mcp_claude/: server.py  tb.py
tinybird/datasources/: mcp_logs.datasource  mv_count_mcp_errors_by_tool.datasource
tinybird/pipes/: api_count_requests.pipe  api_count_requests_5m.pipe  api_count_uniq_sessions.pipe
