[project]
name = "mcp-tinybird"
version = "0.1.2"
description = "A MCP server for Claude to interact with a Tinybird Workspace"
readme = "README.md"
requires-python = ">=3.10"
homepage = "https://github.com/tinybirdco/mcp-tinybird"
dependencies = [
 "httpx>=0.27.2",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "alrocar"
email = "alrocar@tinybird.co"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-tinybird = "mcp-tinybird:main"
