[project]
name = "mcp-tinybird"
version = "0.1.3"
description = "An MCP server to interact with a Tinybird Workspace from any MCP client."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "httpx>=0.27.2",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "alrocar"
email = "alrocar@tinybird.co"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
tinybird-mcp = "mcp-tinybird:main"

[project.urls]
homepage = "https://github.com/tinybirdco/mcp-tinybird"
